--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Weather</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="script.js"></script>
-    <!-- <script defer src="mockScript.js"></script> -->
+    <!-- <script defer src="script.js"></script> -->
+    <script defer src="mockScript.js"></script>
 </head>
 
 <body class="bg-gray-200">
